--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -4,13 +4,38 @@
 }
 
 .footer__group {
-  display: flex;
-  align-items: baseline;
+  @media screen and (max-width: 767px) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 60px;
+    text-align: center;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    text-align: center;
+  }
+
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    align-items: baseline;
+  }
 }
 
 .footer__logo-group {
-  width: 231px;
-  margin-right: 70px;
+  width: 232px;
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    margin-right: 165px;
+    margin-bottom: 60px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-right: 70px;
+  }
 }
 
 .footer__logo {
@@ -50,7 +75,10 @@
 .footer__social-links {
   width: 206px;
   height: 80px;
-  margin-right: 93px;
+
+  @media screen and (min-width: 1200px) {
+    margin-right: 93px;
+  }
 }
 
 .footer__social-text {
@@ -87,11 +115,24 @@
 
 /* Form INPUT */
 
+// .footer__form {
+//   @media screen and (min-width: 768px) and (max-width: 1199px) {
+//     margin-left: auto;
+//     margin-right: auto;
+//   }
+// }
+
 .form__group {
   display: flex;
+  flex-direction: column;
   align-items: center;
   margin-top: 20px;
-  gap: 12px;
+  gap: 20px;
+
+  @media screen and (min-width: 1200px) {
+    flex-direction: row;
+    gap: 12px;
+  }
 }
 
 .form__input {
