--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -3,15 +3,28 @@
 }
 
 .team-section__list {
-  display: flex;
-  gap: 30px;
+  display: block;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
 }
 
 .team-section__item {
-  width: calc((100% - 90px) / 4);
+  width: 100%;
   border-radius: 0px 0px 4px 4px;
   box-shadow: $card-shadow;
   background-color: $main-bg;
+
+  @media screen and (min-width: 768px) {
+    width: calc((100% - 30px) / 2);
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: calc((100% - 90px) / 4);
+  }
 }
 
 .team-section__group {
