--- a/sass/components/_work.scss
+++ b/sass/components/_work.scss
@@ -1,3 +1,11 @@
+.work-section {
+  display: none;
+
+  @media screen and (min-width: 1200px) {
+    display: block;
+  }
+}
+
 .work-section__list {
   display: flex;
   gap: 30px;
