--- a/css/main.css
+++ b/css/main.css
@@ -59,7 +59,6 @@ img {
 .container {
   margin-right: auto;
   margin-left: auto;
-  max-width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
 }
@@ -106,6 +105,16 @@ img {
   display: -ms-flexbox;
   display: flex;
 }
+@media screen and (max-width: 767px) {
+  .header__nav {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
 
 .header__logo {
   display: block;
@@ -134,6 +143,11 @@ img {
   display: -ms-flexbox;
   display: flex;
   gap: 50px;
+}
+@media screen and (max-width: 767px) {
+  .header__list {
+    display: none;
+  }
 }
 
 .header__link {
@@ -172,6 +186,11 @@ img {
   margin-left: auto;
   gap: 30px;
 }
+@media screen and (max-width: 767px) {
+  .contact-list {
+    display: none;
+  }
+}
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .contact-list {
     -webkit-box-orient: vertical;
@@ -203,9 +222,33 @@ img {
   }
 }
 
+.header__menu-btn {
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+}
+@media screen and (min-width: 768px) {
+  .header__menu-btn {
+    display: none;
+  }
+}
+
+.header__menu-btn .header__icon-close {
+  display: none;
+}
+
+.header__menu-btn.is-open .header__icon-close {
+  display: block;
+}
+
+.header__menu-btn.is-open .header__icon-menu {
+  display: none;
+}
+
 .hero-section {
-  max-width: 1600px;
-  min-height: 600px;
+  max-width: 480px;
+  min-height: 400px;
   margin: 0 auto;
   padding-top: 200px;
   padding-bottom: 200px;
@@ -214,10 +257,26 @@ img {
   background-position: center;
   background-color: #2f303a;
 }
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .hero-section {
+    min-width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero-section {
+    max-width: 1600px;
+    min-height: 600px;
+  }
+}
 
 .hero-section__container {
-  width: 696px;
+  max-width: 360px;
   text-align: center;
+}
+@media screen and (min-width: 1200px) {
+  .hero-section__container {
+    max-width: 696px;
+  }
 }
 
 .hero-section__title {
@@ -228,6 +287,12 @@ img {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: #ffffff;
+}
+@media screen and (max-width: 1199px) {
+  .hero-section__title {
+    font-size: 26px;
+    line-height: 1.61;
+  }
 }
 
 .hero-section__btn {
