--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -4,6 +4,11 @@
 
 .header__nav {
   display: flex;
+
+  @media screen and (max-width: 767px) {
+    justify-content: space-between;
+    align-items: center;
+  }
 }
 
 .header__logo {
@@ -31,6 +36,10 @@
 .header__list {
   display: flex;
   gap: 50px;
+
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
 }
 
 .header__link {
@@ -72,6 +81,10 @@
   margin-left: auto;
   gap: 30px;
 
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     flex-direction: column;
     gap: 10px;
@@ -92,4 +105,27 @@
     font-size: 12px;
     line-height: 1.16;
   }
+}
+
+.header__menu-btn {
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
+}
+
+.header__menu-btn .header__icon-close {
+  display: none;
+}
+
+.header__menu-btn.is-open .header__icon-close {
+  display: block;
+}
+
+.header__menu-btn.is-open .header__icon-menu {
+  display: none;
 }
