--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,6 +1,6 @@
 .hero-section {
-  max-width: 1600px;
-  min-height: 600px;
+  max-width: 480px;
+  min-height: 400px;
   margin: 0 auto;
   padding-top: 200px;
   padding-bottom: 200px;
@@ -11,11 +11,24 @@
     url(../images/WebStudio/hero-bg-img.jpg);
   background-position: center;
   background-color: $secondary-bg;
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    min-width: 768px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    max-width: 1600px;
+    min-height: 600px;
+  }
 }
 
 .hero-section__container {
-  width: 696px;
+  max-width: 360px;
   text-align: center;
+
+  @media screen and (min-width: 1200px) {
+    max-width: 696px;
+  }
 }
 
 .hero-section__title {
@@ -26,6 +39,11 @@
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: $main-bg;
+
+  @media screen and (max-width: 1199px) {
+    font-size: 26px;
+    line-height: 1.61;
+  }
 }
 
 .hero-section__btn {
