--- a/sass/utils/_base.scss
+++ b/sass/utils/_base.scss
@@ -52,7 +52,7 @@ img {
 .container {
   margin-right: auto;
   margin-left: auto;
-  max-width: 1200px;
+  // max-width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
 
