--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -24,8 +24,8 @@
 }
 
 .modal {
-  width: 528px;
-  height: 581px;
+  width: 450px;
+  height: 609px;
   padding: 40px;
 
   position: absolute;
@@ -38,6 +38,11 @@
 
   transform: translate(-50%, -50%) scale(1);
   transition: transform $animation;
+
+  @media screen and (min-width: 1200px) {
+    width: 528px;
+    height: 581px;
+  }
 }
 
 .modal__btn {
@@ -98,7 +103,7 @@
 .modal-form__input {
   padding: 12px 16px 12px 42px;
 
-  width: 448px;
+  width: 100%;
   height: 40px;
 
   border: $modal-form-border;
@@ -130,7 +135,7 @@
   padding: 12px 16px;
   margin-bottom: 20px;
 
-  width: 448px;
+  width: 100%;
   height: 120px;
 
   resize: none;
@@ -172,11 +177,16 @@
   gap: 8px;
   margin-bottom: 30px;
 
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.16;
   user-select: none;
 
   color: $secondary-text-clr;
+
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .modal-form__policy-link {
