--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -13,6 +13,10 @@
 .features-section__item {
   width: 450px;
 
+  &:not(:last-child) {
+    margin-bottom: 30px;
+  }
+
   @media screen and (min-width: 768px) {
     width: calc((100% - 30px) / 2);
   }
