--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,9 +1,9 @@
 .hero-section {
   max-width: 480px;
-  min-height: 400px;
+  height: 400px;
   margin: 0 auto;
-  padding-top: 200px;
-  padding-bottom: 200px;
+  padding-top: 118px;
+  padding-bottom: 118px;
   background-image: linear-gradient(
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
@@ -12,13 +12,19 @@
   background-position: center;
   background-color: $secondary-bg;
 
+  @media screen and (max-width: 767px) {
+    max-width: 767px;
+  }
+
   @media screen and (min-width: 768px) and (max-width: 1199px) {
-    min-width: 768px;
+    max-width: 1199px;
   }
 
   @media screen and (min-width: 1200px) {
     max-width: 1600px;
     min-height: 600px;
+    padding-top: 200px;
+    padding-bottom: 200px;
   }
 }
 
