--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -7,6 +7,21 @@
   justify-content: center;
   margin-bottom: 50px;
   gap: 8px;
+
+  @media screen and (max-width: 767px) {
+    width: 326px;
+    flex-wrap: wrap;
+    row-gap: 15px;
+    column-gap: 8px;
+    justify-content: start;
+  }
+
+  // @media screen and (min-width: 768px) {
+  //   display: flex;
+  //   justify-content: center;
+  //   margin-bottom: 50px;
+  //   gap: 8px;
+  // }
 }
 
 .portfolio-section__btn {
@@ -40,7 +55,7 @@
 }
 
 .portfolio-section__item {
-  width: calc((100% - 60px) / 3);
+  width: 100%;
 
   transition: box-shadow $animation;
 
@@ -60,6 +75,14 @@
   &:hover .portfolio-section__overlay,
   &:focus .portfolio-section__overlay {
     transform: translateY(0);
+  }
+
+  @media screen and (min-width: 768px) {
+    width: calc((100% - 30px) / 2);
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: calc((100% - 60px) / 3);
   }
 }
 
