--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,4 +8,5 @@
 @import "./components/clients";
 @import "./components/footer";
 @import "./components/portfolio";
+@import "./components/mobile-menu";
 @import "./components/backdrop";
