--- a/css/main.css
+++ b/css/main.css
@@ -59,6 +59,8 @@ img {
 .container {
   margin-right: auto;
   margin-left: auto;
+  min-width: 480px;
+  max-width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
 }
@@ -258,7 +260,7 @@ img {
 
 .hero-section {
   max-width: 480px;
-  height: 400px;
+  min-height: 400px;
   margin: 0 auto;
   padding-top: 118px;
   padding-bottom: 118px;
@@ -331,10 +333,6 @@ img {
 .hero-section__btn:hover, .hero-section__btn:focus {
   color: #2196f3;
   background-color: #ffffff;
-}
-
-.features-section {
-  padding-bottom: 0;
 }
 
 @media screen and (min-width: 768px) {
@@ -468,6 +466,11 @@ img {
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   background-color: #ffffff;
+}
+@media screen and (max-width: 767px) {
+  .team-section__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 @media screen and (min-width: 768px) {
   .team-section__item {
@@ -991,7 +994,7 @@ img {
   top: 0;
   left: 0;
   width: 100vw;
-  height: 796px;
+  height: 100vh;
   padding: 48px 83px 48px 40px;
   background-color: #ffffff;
   -webkit-box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
@@ -1015,8 +1018,18 @@ img {
   right: 15px;
 }
 
-.header__menu-list {
-  margin-bottom: 302px;
+.header__menu-group {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .header__menu-item:not(:last-child) {
