--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,6 +1,6 @@
 .hero-section {
   max-width: 480px;
-  height: 400px;
+  min-height: 400px;
   margin: 0 auto;
   padding-top: 118px;
   padding-bottom: 118px;
