--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -18,6 +18,12 @@
   box-shadow: $card-shadow;
   background-color: $main-bg;
 
+  @media screen and (max-width: 767px) {
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+  }
+
   @media screen and (min-width: 768px) {
     width: calc((100% - 30px) / 2);
   }
