add scroll to backdrop

--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -8,6 +8,7 @@
 
   display: inline-block;
   background-color: $backdrop-bg-clr;
+  overflow-y: scroll;
 
   opacity: 1;
   transition: opacity $animation, visibility $animation;
