--- a/css/main.css
+++ b/css/main.css
@@ -64,17 +64,17 @@ img {
 }
 @media screen and (min-width: 480px) {
   .container {
-    max-width: 480px;
+    width: 480px;
   }
 }
 @media screen and (min-width: 768px) {
   .container {
-    max-width: 768px;
+    width: 768px;
   }
 }
 @media screen and (min-width: 1200px) {
   .container {
-    max-width: 1200px;
+    width: 1200px;
   }
 }
 
@@ -257,37 +257,45 @@ img {
 }
 
 .hero-section {
-  max-width: 480px;
-  min-height: 400px;
   margin: 0 auto;
   padding-top: 118px;
   padding-bottom: 118px;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/WebStudio/hero-bg-img.jpg);
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/WebStudio/hero-bg-img.jpg);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../../images/WebStudio/hero-bg-img-480.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/WebStudio/hero-bg-img-480.jpg);
   background-position: center;
+  background-size: cover;
   background-color: #2f303a;
 }
-@media screen and (max-width: 767px) {
+@media screen and (min-device-pixel-ratio: 2), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
   .hero-section {
-    max-width: 767px;
+    background-image: url(../../images/WebStudio/hero-bg-img-960.jpg);
   }
 }
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (min-width: 577px) and (max-width: 1199px) {
   .hero-section {
-    max-width: 1199px;
+    background-image: url(../../images/WebStudio/hero-bg-img-768.jpg);
+  }
+}
+@media screen and (min-width: 577px) and (max-width: 1199px) and (min-device-pixel-ratio: 2), screen and (min-width: 577px) and (max-width: 1199px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 577px) and (max-width: 1199px) and (min-resolution: 192dpi), screen and (min-width: 577px) and (max-width: 1199px) and (min-resolution: 2dppx) {
+  .hero-section {
+    background-image: url(../../images/WebStudio/hero-bg-img-1536.jpg);
   }
 }
 @media screen and (min-width: 1200px) {
   .hero-section {
-    max-width: 1600px;
     min-height: 600px;
-    padding-top: 200px;
-    padding-bottom: 200px;
+    padding: 200px 0;
+    background-image: url(../../images/WebStudio/hero-bg-img-1600.jpg);
+  }
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero-section {
+    background-image: url(../../images/WebStudio/hero-bg-img-3200.jpg);
   }
 }
 
 .hero-section__container {
-  max-width: 360px;
+  max-width: 390px;
   text-align: center;
 }
 @media screen and (min-width: 1200px) {
