--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,6 +1,4 @@
 .hero-section {
-  max-width: 480px;
-  min-height: 400px;
   margin: 0 auto;
   padding-top: 118px;
   padding-bottom: 118px;
@@ -8,28 +6,40 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../images/WebStudio/hero-bg-img.jpg);
+    url(../../images/WebStudio/hero-bg-img-480.jpg);
   background-position: center;
+  background-size: cover;
   background-color: $secondary-bg;
 
-  @media screen and (max-width: 767px) {
-    max-width: 767px;
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    background-image: url(../../images/WebStudio/hero-bg-img-960.jpg);
   }
 
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
-    max-width: 1199px;
+  @media screen and (min-width: 577px) and (max-width: 1199px) {
+    background-image: url(../../images/WebStudio/hero-bg-img-768.jpg);
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: url(../../images/WebStudio/hero-bg-img-1536.jpg);
+    }
   }
 
   @media screen and (min-width: 1200px) {
-    max-width: 1600px;
     min-height: 600px;
-    padding-top: 200px;
-    padding-bottom: 200px;
+    padding: 200px 0;
+    background-image: url(../../images/WebStudio/hero-bg-img-1600.jpg);
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: url(../../images/WebStudio/hero-bg-img-3200.jpg);
+    }
   }
 }
 
 .hero-section__container {
-  max-width: 360px;
+  max-width: 390px;
   text-align: center;
 
   @media screen and (min-width: 1200px) {
