--- a/sass/utils/_base.scss
+++ b/sass/utils/_base.scss
@@ -52,20 +52,19 @@ img {
 .container {
   margin-right: auto;
   margin-left: auto;
-
   padding-left: 15px;
   padding-right: 15px;
 
   @media screen and (min-width: 480px) {
-    max-width: 480px;
+    width: 480px;
   }
 
   @media screen and (min-width: 768px) {
-    max-width: 768px;
+    width: 768px;
   }
 
   @media screen and (min-width: 1200px) {
-    max-width: 1200px;
+    width: 1200px;
   }
 }
 
