--- a/css/main.css
+++ b/css/main.css
@@ -730,6 +730,10 @@ img {
 }
 
 /* Form INPUT */
+.footer__form {
+  width: 100%;
+}
+
 .form__group {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -755,7 +759,7 @@ img {
 }
 
 .form__input {
-  width: 358px;
+  width: 100%;
   height: 50px;
   padding: 15px 16px;
   font-size: 16px;
@@ -797,6 +801,16 @@ img {
 }
 .form__input:focus-within {
   border-color: #2196f3;
+}
+@media screen and (min-width: 480px) {
+  .form__input {
+    width: 450px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .form__input {
+    width: 358px;
+  }
 }
 
 .form__label {
