--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -114,6 +114,9 @@
 }
 
 /* Form INPUT */
+.footer__form {
+  width: 100%;
+}
 
 .form__group {
   display: flex;
@@ -129,7 +132,7 @@
 }
 
 .form__input {
-  width: 358px;
+  width: 100%;
   height: 50px;
 
   padding: 15px 16px;
@@ -155,6 +158,14 @@
 
   &:focus-within {
     border-color: $brand-clr;
+  }
+
+  @media screen and (min-width: 480px) {
+    width: 450px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 358px;
   }
 }
 
