--- a/css/main.css
+++ b/css/main.css
@@ -863,17 +863,17 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   margin-bottom: 50px;
   gap: 8px;
 }
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 480px) and (max-width: 767px) {
   .portfolio-section__list-btn {
     width: 326px;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
     row-gap: 15px;
     -webkit-column-gap: 8px;
        -moz-column-gap: 8px;
