--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -4,13 +4,14 @@
 
 .portfolio-section__list-btn {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   margin-bottom: 50px;
   gap: 8px;
 
-  @media screen and (max-width: 767px) {
+  @media screen and (min-width: 480px) and (max-width: 767px) {
     width: 326px;
-    flex-wrap: wrap;
+
     row-gap: 15px;
     column-gap: 8px;
     justify-content: start;
