--- a/css/main.css
+++ b/css/main.css
@@ -1039,6 +1039,7 @@ img {
 }
 
 .header__menu-group {
+  min-width: 320px;
   height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1079,7 +1080,7 @@ img {
 
 .header__menu-contact-link {
   font-weight: 500;
-  font-size: 34px;
+  font-size: 31px;
   line-height: 1.17;
   letter-spacing: 0.02em;
   color: #757575;
@@ -1088,6 +1089,11 @@ img {
 }
 .header__menu-contact-link:hover, .header__menu-contact-link:focus {
   color: #2196f3;
+}
+@media screen and (min-width: 338px) {
+  .header__menu-contact-link {
+    font-size: 34px;
+  }
 }
 .header__menu-contact-link--mail {
   font-size: 24px;
@@ -1098,6 +1104,8 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   gap: 20px;
 }
 
