--- a/css/main.css
+++ b/css/main.css
@@ -352,9 +352,6 @@ img {
   }
 }
 
-.features-section__item {
-  width: 450px;
-}
 .features-section__item:not(:last-child) {
   margin-bottom: 30px;
 }
@@ -730,8 +727,10 @@ img {
 }
 
 /* Form INPUT */
-.footer__form {
-  width: 100%;
+@media screen and (max-width: 479px) {
+  .footer__form {
+    width: 100%;
+  }
 }
 
 .form__group {
@@ -1142,7 +1141,6 @@ img {
 }
 
 .modal {
-  width: 450px;
   height: 609px;
   padding: 40px;
   position: absolute;
@@ -1158,6 +1156,16 @@ img {
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (max-width: 450px) {
+  .modal {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 451px) and (max-width: 1199px) {
+  .modal {
+    width: 450px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .modal {
@@ -1306,9 +1314,6 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -1326,6 +1331,9 @@ img {
   .modal-form__policy-label {
     font-size: 14px;
     line-height: 1.71;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 }
 
