--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -115,7 +115,9 @@
 
 /* Form INPUT */
 .footer__form {
-  width: 100%;
+  @media screen and (max-width: 479px) {
+    width: 100%;
+  }
 }
 
 .form__group {
