--- a/css/main.css
+++ b/css/main.css
@@ -268,7 +268,7 @@ img {
 }
 @media screen and (min-device-pixel-ratio: 2), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
   .hero-section {
-    background-image: url(../../images/WebStudio/hero-bg-img-960.jpg);
+    background-image: url(./images/WebStudio/hero-bg-img-960.jpg);
   }
 }
 @media screen and (min-width: 577px) and (max-width: 1199px) {
