--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -6,7 +6,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(../../images/WebStudio/hero-bg-img-480.jpg);
+    url(./images/WebStudio/hero-bg-img-480.jpg);
   background-position: center;
   background-size: cover;
   background-color: $secondary-bg;
