--- a/css/main.css
+++ b/css/main.css
@@ -260,15 +260,15 @@ img {
   margin: 0 auto;
   padding-top: 118px;
   padding-bottom: 118px;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(./images/WebStudio/hero-bg-img-480.jpg);
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(./images/WebStudio/hero-bg-img-480.jpg);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/WebStudio/hero-bg-img-480.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/WebStudio/hero-bg-img-480.jpg);
   background-position: center;
   background-size: cover;
   background-color: #2f303a;
 }
 @media screen and (min-device-pixel-ratio: 2), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
   .hero-section {
-    background-image: url(./images/WebStudio/hero-bg-img-960.jpg);
+    background-image: url(../images/WebStudio/hero-bg-img-960.jpg);
   }
 }
 @media screen and (min-width: 577px) and (max-width: 1199px) {
