--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -6,7 +6,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url(./images/WebStudio/hero-bg-img-480.jpg);
+    url(../images/WebStudio/hero-bg-img-480.jpg);
   background-position: center;
   background-size: cover;
   background-color: $secondary-bg;
@@ -14,7 +14,7 @@
   @media screen and (min-device-pixel-ratio: 2),
     screen and (min-resolution: 192dpi),
     screen and (min-resolution: 2dppx) {
-    background-image: url(./images/WebStudio/hero-bg-img-960.jpg);
+    background-image: url(../images/WebStudio/hero-bg-img-960.jpg);
   }
 
   @media screen and (min-width: 577px) and (max-width: 1199px) {
