--- a/css/main.css
+++ b/css/main.css
@@ -273,24 +273,26 @@ img {
 }
 @media screen and (min-width: 577px) and (max-width: 1199px) {
   .hero-section {
-    background-image: url(../../images/WebStudio/hero-bg-img-768.jpg);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/WebStudio/hero-bg-img-768.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/WebStudio/hero-bg-img-768.jpg);
   }
 }
 @media screen and (min-width: 577px) and (max-width: 1199px) and (min-device-pixel-ratio: 2), screen and (min-width: 577px) and (max-width: 1199px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 577px) and (max-width: 1199px) and (min-resolution: 192dpi), screen and (min-width: 577px) and (max-width: 1199px) and (min-resolution: 2dppx) {
   .hero-section {
-    background-image: url(../../images/WebStudio/hero-bg-img-1536.jpg);
+    background-image: url(../images/WebStudio/hero-bg-img-1536.jpg);
   }
 }
 @media screen and (min-width: 1200px) {
   .hero-section {
     min-height: 600px;
     padding: 200px 0;
-    background-image: url(../../images/WebStudio/hero-bg-img-1600.jpg);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/WebStudio/hero-bg-img-1600.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/WebStudio/hero-bg-img-1600.jpg);
   }
 }
 @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .hero-section {
-    background-image: url(../../images/WebStudio/hero-bg-img-3200.jpg);
+    background-image: url(../images/WebStudio/hero-bg-img-3200.jpg);
   }
 }
 
