--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -18,22 +18,30 @@
   }
 
   @media screen and (min-width: 577px) and (max-width: 1199px) {
-    background-image: url(../../images/WebStudio/hero-bg-img-768.jpg);
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/WebStudio/hero-bg-img-768.jpg);
     @media screen and (min-device-pixel-ratio: 2),
       screen and (min-resolution: 192dpi),
       screen and (min-resolution: 2dppx) {
-      background-image: url(../../images/WebStudio/hero-bg-img-1536.jpg);
+      background-image: url(../images/WebStudio/hero-bg-img-1536.jpg);
     }
   }
 
   @media screen and (min-width: 1200px) {
     min-height: 600px;
     padding: 200px 0;
-    background-image: url(../../images/WebStudio/hero-bg-img-1600.jpg);
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/WebStudio/hero-bg-img-1600.jpg);
     @media screen and (min-device-pixel-ratio: 2),
       screen and (min-resolution: 192dpi),
       screen and (min-resolution: 2dppx) {
-      background-image: url(../../images/WebStudio/hero-bg-img-3200.jpg);
+      background-image: url(../images/WebStudio/hero-bg-img-3200.jpg);
     }
   }
 }
