--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -7,8 +7,10 @@
 }
 
 .features-section__item {
-  &:not(:last-child) {
-    margin-bottom: 30px;
+  @media screen and (max-width: 767px) {
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
   }
 
   @media screen and (min-width: 768px) {
