--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -22,12 +22,12 @@
       url(../images/WebStudio/hero-bg-img-960.jpg);
   }
 
-  @media screen and (max-width: 767px) {
-    max-width: 480px;
-  }
+  // @media screen and (max-width: 767px) {
+  //   max-width: 480px;
+  // }
 
   @media screen and (min-width: 768px) and (max-width: 1199px) {
-    max-width: 768px;
+    // max-width: 768px;
     background-image: linear-gradient(
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
