--- a/css/main.css
+++ b/css/main.css
@@ -925,6 +925,7 @@ img {
 
 .portfolio-section__item {
   width: 100%;
+  border: 1px solid #eeeeee;
   -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -936,6 +937,7 @@ img {
 }
 .portfolio-section__item .link {
   display: block;
+  height: 100%;
 }
 .portfolio-section__item:hover .link {
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
@@ -966,7 +968,6 @@ img {
 } */
 .portfolio-section__group {
   padding: 20px 24px;
-  border: 1px solid #eeeeee;
 }
 
 .portfolio-section__title {
