--- a/css/main.css
+++ b/css/main.css
@@ -59,8 +59,7 @@ img {
 .container {
   margin-right: auto;
   margin-left: auto;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding: 0 15px;
 }
 @media screen and (min-width: 480px) {
   .container {
