--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -24,14 +24,14 @@
   align-items: center;
   border: 1px solid $icon-color;
   border-radius: 4px;
-  color: $icon-color;
-  fill: currentColor;
 
-  transition: color $animation, border-color $animation;
+  fill: $icon-color;
+
+  transition: fill $animation, border-color $animation;
 
   &:hover,
   &:focus {
-    color: $brand-clr;
+    fill: $brand-clr;
     border-color: $brand-clr;
   }
 }
